k8s/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: lattice-cast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 127.0.0.1:7000/lattice-cast-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
