k8s/blob-deployment.yaml
# blob-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blob-deployment
  namespace: lattice-cast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blob
  template:
    metadata:
      labels:
        app: blob
    spec:
      containers:
      - name: blob
        image: rustfs/rustfs:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - name: blob-data
          mountPath: /data/blob0
      volumes:
      - name: blob-data
        hostPath:
          path: /home/posetmage/HDD/Download/Github/LatticeMage/LatticeCast/.blob/
          type: DirectoryOrCreate
