k8s/db-deployment.yaml
# db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: lattice-cast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:18
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pg-data
          mountPath: /var/lib/postgresql
      volumes:
      - name: pg-data
        hostPath:
          path: /home/posetmage/HDD/Download/Github/LatticeMage/LatticeCast/.pg/
          type: DirectoryOrCreate
