k8s/frontend-deployment.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: lattice-cast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 127.0.0.1:7000/lattice-cast-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
