k8s/minio-deployment.yaml
# minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: lattice-cast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        - containerPort: 9001
        args: ["server", "/data", "--console-address", ":9001"]
        volumeMounts:
        - name: minio-data
          mountPath: /data
      volumes:
      - name: minio-data
        hostPath:
          path: /home/posetmage/HDD/Download/Github/LatticeMage/LatticeCast/.minio/
          type: DirectoryOrCreate
