k8s/blob-service.yaml
# blob-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blob
  namespace: lattice-cast
spec:
  selector:
    app: blob
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
  type: ClusterIP
