k8s/backend-ingress.yaml
# backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: lattice-cast
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/renew-before: 720h
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rps: "1"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-cache: "off"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - lattice-cast.posetmage.com
    secretName: lattice-cast-tls-secret
  rules:
  - host: lattice-cast.posetmage.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
