k8s/frontend-ingress.yaml
# frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: lattice-cast
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/renew-before: 720h
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Optional: Redirect HTTP to HTTPS
    nginx.ingress.kubernetes.io/limit-rps: "30"  # Rate limit: 30 requests per second
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-cache: "off"
    # for mime types
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-hide-header: "Content-Type"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - lattice-cast.posetmage.com
    secretName: lattice-cast-tls-secret # Reference the Secret we created
  rules:
  - host: lattice-cast.posetmage.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
